--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                <strong>HACKATHON8</strong> 
             </div>
             <div class="title">
-                Tarik Tambang
+                Permainan Tarik Tambang
             </div>
             <div class="table">
                 <table width="100%">
