update html dan css

--- a/index.html
+++ b/index.html
@@ -9,37 +9,42 @@
             <div class="header">
                <strong>HACKATHON8</strong> 
             </div>
-            <div class="title">
-                Permainan Tarik Tambang
+            <div class="container" style="display: none;">
+                <div class="title">
+                    Permainan Panjat Pinang
+                </div>
+                <div class="table">
+                    <table width="100%">
+                        <tr>
+                            <td style="width:30%;">
+                                &nbsp;
+                            </td>
+                            <td>
+                                <div class="explain">
+                                    <span class="middleText">CARA BERMAIN:</span>
+                                    <ul class="list">
+                                        <li>Gunakan keyboard anda untuk bermain game ini.</li>
+                                        <li>Game ini akan dibagi menjadi 2 tim yaitu tim Merah dan tim Biru.</li>
+                                        <li>Tim merah akan menggunakan tombol "Z" dan tim Biru akan menggunakan tombol "M" untuk memanjat tali</li>
+                                    </ul>
+                                </div>
+                            </td>
+                            <td style="width: 30%;">
+                                &nbsp;
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="button">
+                    <button class="pushable">
+                        <span class="front">
+                          START
+                        </span>
+                      </button>
+                </div>
             </div>
-            <div class="table">
-                <table width="100%">
-                    <tr>
-                        <td style="width: 30%;">
-                            &nbsp;
-                        </td>
-                        <td>
-                            <div class="explain">
-                                <span class="middleText">CARA BERMAIN:</span>
-                                <ul class="list">
-                                    <li>Gunakan keyboard anda untuk bermain game ini.</li>
-                                    <li>Game ini akan dibagi menjadi 2 tim yaitu tim Merah dan tim Biru.</li>
-                                    <li>Tim merah akan menggunakan tombol "Z" dan tim Biru akan menggunakan tombol "Z" untuk menarik tali</li>
-                                </ul>
-                            </div>
-                        </td>
-                        <td style="width: 30%;">
-                            &nbsp;
-                        </td>
-                    </tr>
-                </table>
-            </div>
-            <div class="button">
-                <button class="pushable">
-                    <span class="front">
-                      START
-                    </span>
-                  </button>
+            <div class="container">
+                
             </div>
         </div>
     </body>
