--- a/index.html
+++ b/index.html
@@ -44,9 +44,20 @@
                 </div>
             </div>
             <div class="container">
-                
+                <div  class="witjambe">
+                    <div class="pohon">
+                        <img class="img1" src="pic/aaa.png" width="500px">
+                    </div>
+                </div>
+                <div class="orangnya">
+                    <img class="img2" src="pic/bbbb.png" style="top: -150px;">
+                </div>
+                <div class="orangnya2">
+                    <img class="img3" src="pic/ccccc.png">
+                </div>
             </div>
         </div>
+    <script src="index.js"></script>
     </body>
     <footer>
         
