--- a/index.html
+++ b/index.html
@@ -1,65 +1,69 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Permainan Tarik Tambang</title>
-        <link rel="stylesheet" href="style.css"/>
-    </head>
-    <body>
-        <div class="main">
-            <div class="header">
-               <strong>HACKATHON8</strong> 
+
+<head>
+    <title>Permainan Panjat Pinang</title>
+    <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+    <div class="main">
+        <div class="header">
+            <strong>HACKATHON8</strong>
+        </div>
+        <div class="home">
+            <div class="title">
+                Permainan Panjat Pinang
             </div>
-            <div class="container" style="display: none;">
-                <div class="title">
-                    Permainan Panjat Pinang
-                </div>
-                <div class="table">
-                    <table width="100%">
-                        <tr>
-                            <td style="width:30%;">
-                                &nbsp;
-                            </td>
-                            <td>
-                                <div class="explain">
-                                    <span class="middleText">CARA BERMAIN:</span>
-                                    <ul class="list">
-                                        <li>Gunakan keyboard anda untuk bermain game ini.</li>
-                                        <li>Game ini akan dibagi menjadi 2 tim yaitu tim Merah dan tim Biru.</li>
-                                        <li>Tim merah akan menggunakan tombol "Z" dan tim Biru akan menggunakan tombol "M" untuk memanjat tali</li>
-                                    </ul>
-                                </div>
-                            </td>
-                            <td style="width: 30%;">
-                                &nbsp;
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                <div class="button">
-                    <button class="pushable">
-                        <span class="front">
-                          START
-                        </span>
-                      </button>
-                </div>
+            <div class="table">
+                <table width="100%">
+                    <tr>
+                        <td style="width:30%;">
+                            &nbsp;
+                        </td>
+                        <td>
+                            <div class="explain">
+                                <span class="middleText">CARA BERMAIN:</span>
+                                <ul class="list">
+                                    <li>Gunakan keyboard anda untuk bermain game ini.</li>
+                                    <li>Game ini akan dibagi menjadi 2 tim yaitu tim Merah dan tim Biru.</li>
+                                    <li>Tim merah akan menggunakan tombol "Z" dan tim Biru akan menggunakan tombol "M"
+                                        untuk memanjat tali</li>
+                                </ul>
+                            </div>
+                        </td>
+                        <td style="width: 30%;">
+                            &nbsp;
+                        </td>
+                    </tr>
+                </table>
             </div>
-            <div class="container">
-                <div  class="witjambe">
-                    <div class="pohon">
-                        <img class="img1" src="pic/aaa.png" width="500px">
-                    </div>
-                </div>
-                <div class="orangnya">
-                    <img class="img2" src="pic/bbbb.png" style="top: -150px;">
-                </div>
-                <div class="orangnya2">
-                    <img class="img3" src="pic/ccccc.png">
-                </div>
+            <div class="button">
+                <button class="pushable">
+                    <span class="front">
+                        START
+                    </span>
+                </button>
             </div>
         </div>
+        <div class="game" style="display:none;">
+            <div class="witjambe">
+                <div class="pohon">
+                    <img class="img1" src="pic/aaa.png" width="500px">
+                </div>
+            </div>
+            <div class="orangnya">
+                <img class="img2" src="pic/bbbb.png" style="top: -150px;">
+            </div>
+            <div class="orangnya2">
+                <img class="img3" src="pic/ccccc.png" style="top: -285px;">
+            </div>
+        </div>
+    </div>
     <script src="index.js"></script>
-    </body>
-    <footer>
-        
-    </footer>
+</body>
+<footer>
+
+</footer>
+
 </html>
