--- a/index.html
+++ b/index.html
@@ -46,6 +46,17 @@
                 </button>
             </div>
         </div>
+        <div class="winner" style="display: none;">
+            <div class="winner-result">
+            </div>
+            <div class="buttonReset">
+                <button class="pushable2">
+                    <span class="front2">
+                        RESET
+                    </span>
+                </button>
+            </div>
+        </div>
         <div class="game" style="display:none;">
             <div class="witjambe">
                 <div class="pohon">
