vid ga iso play otomatis

--- a/index.html
+++ b/index.html
@@ -46,8 +46,14 @@
                 </button>
             </div>
         </div>
+        <div id="countdown" style="display: none;"></div>
         <div class="winner" style="display: none;">
             <div class="winner-result">
+            </div>
+            <div class="vidwinresult">
+                <video width="600px" controls="false">
+                    <source src="pic/JohnCena.mp4" type="video/mp4">
+                </video>
             </div>
             <div class="buttonReset">
                 <button class="pushable2">
